fix: styled page content
resolves #115

--- a/assets/css/abstracts/_variables.scss
+++ b/assets/css/abstracts/_variables.scss
@@ -39,3 +39,6 @@ $orange-focus: #fadc90;
 $yellow: #ff0;
 $white: #fff;
 $grey: #bdbdbb;
+
+// Images
+$img-size-medium: rem(262); // need to decide and set other size variables
