--- a/assets/css/layout/_layout.scss
+++ b/assets/css/layout/_layout.scss
@@ -6,11 +6,83 @@ article {
   margin-right: auto;
   max-width: 75ch;
   padding: rem(0) rem(27);
+
+  h2:not(.h3) {
+    border-bottom: rem(5) solid $gold;
+    padding-bottom: rem(12);
+  }
+
+  .wp-block-image {
+    figure {
+      img {
+        height: 100%;
+      }
+    }
+  }
+
+  .wp-block-image + * {
+    margin-top: rem(50);
+  }
 }
 
-@media screen and (min-width: 1024px) {
+/*
+ * Default WP Alignment Classes
+ *****************************************************************************/
+figcaption {
+  color: #ddd;
+  display: block;
+  font-size: 75%;
+  font-style: italic;
+  font-weight: 100;
+  margin: rem(5) 0 0;
+  padding: 0;
+  text-align: center;
+}
+
+figcaption:hover {
+  background: #444;
+  border: rem(1) solid #555;
+  padding: rem(5) 0;
+  text-align: center;
+}
+
+.size-large {
+  height: $img-size-medium; // need to decide and set other size variables
+}
+
+@media screen and (min-width: rem(1024)) {
   article {
     max-width: 130ch;
     padding: rem(0) rem(60);
+
+    .wp-block-image ~ h2 {
+      margin-top: $img-size-medium;
+    }
+  }
+
+  /*
+ * Default WP Alignment Classes
+ *****************************************************************************/
+
+  .aligncenter,
+  .alignleft,
+  .alignright {
+    display: block;
+    padding: 0;
+  }
+
+  .aligncenter {
+    float: none;
+    margin: 0.5em auto 1em;
+  }
+
+  .alignright {
+    float: right;
+    margin: 0.5em 0 1em 1em;
+  }
+
+  .alignleft {
+    float: left;
+    margin: 0.5em 1em 1em 0;
   }
 }
