--- a/assets/css/components/_cards.scss
+++ b/assets/css/components/_cards.scss
@@ -1,14 +1,33 @@
 .homepage-cards {
   display: grid;
-  grid-gap: rem(20);
+  grid-gap: rem(38);
   grid-template-columns: repeat(1, 1fr);
+  padding-bottom: rem(151);
 
-  svg {
-    width: 100%;
+  .card {
+    background-color: white;
+    background-repeat: no-repeat;
+    box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
+  }
+
+  .blue {
+    background-image: url("../images/Distribution_blue.svg");
+    background-position-x: rem(-80);
+    background-size: 120% 162%;
+  }
+
+  .green {
+    background-image: url("../images/Distribution_green.svg");
+    background-position: rem(-100) rem(10);
+    background-size: 100% 100%;
+  }
+
+  .yellow {
+    background-image: url("../images/Distribution_yellow.svg");
+    background-size: 200% 101%;
   }
 
   a {
-    border: 1px solid #000; //This is hear to see the space the svg should be taking up
     height: rem(213);
 
     h3 {
@@ -16,13 +35,10 @@
       font-weight: $font-weight-medium;
       line-height: rem(35);
       margin: rem(9) rem(16);
-      position: absolute;
-      z-index: 2;
     }
 
-    .green-title { // Unable to position center card correctly
-      float: right;
-      position: relative;
+    .green-title {
+      margin-left: rem(145);
     }
   }
 }
@@ -31,5 +47,11 @@
   .homepage-cards {
     grid-gap: rem(38);
     grid-template-columns: repeat(3, 1fr);
+
+    a {
+      .green-title {
+        margin-left: rem(86);
+      }
+    }
   }
 }
