--- a/assets/css/layout/_footer.scss
+++ b/assets/css/layout/_footer.scss
@@ -36,18 +36,26 @@ footer {
     }
 
     .funders {
+      p {
+        margin: 0;
+      }
+
       a {
         color: $white;
       }
 
       svg {
-        padding: rem(16) rem(16) rem(16) 0;
+        padding: rem(13) rem(13) rem(13) 0;
         width: rem(144);
       }
     }
 
     .contact-info {
       width: 100%;
+
+      address {
+        font-style: normal;
+      }
 
       a {
         color: $white;
@@ -69,17 +77,11 @@ footer {
       }
     }
 
-    .nav-home-about,
-    .nav-tools,
-    .nav-our-data,
-    .nav-inclusion-challenges {
+    .footer-nav {
       display: none;
     }
 
-    .nav-home-about,
-    .nav-tools,
-    .nav-our-data,
-    .nav-inclusion-challenges,
+    .footer-nav,
     .contact-info,
     .funders {
       a:hover,
@@ -136,26 +138,74 @@ footer {
     .footer-content {
       display: grid;
       grid-row-gap: rem(16);
-      grid-template-columns: repeat(5, 1fr);
+      grid-template-columns: 3.8fr 1.2fr;
       padding: rem(32) rem(48);
 
-      .nav-home-about,
-      .nav-tools,
-      .nav-our-data,
-      .nav-inclusion-challenges {
+      .footer-nav {
         display: block;
 
         a {
           color: $green-light;
           font-weight: $font-weight-semibold;
         }
+
+        ul {
+          display: grid;
+          grid-template-columns: repeat(4, auto);
+
+          li {
+            margin-bottom: rem(36);
+          }
+
+          li:nth-child(1),
+          li:nth-child(2) {
+            grid-column: 1/2;
+          }
+
+          li:nth-child(3) {
+            grid-column: 2/3;
+          }
+
+          li:nth-child(4) {
+            grid-column: 3/4;
+          }
+
+          li:nth-child(5),
+          li:nth-child(6),
+          li:nth-child(7) {
+            grid-column: 4/5;
+          }
+
+          li:nth-last-child(-n+5):not(:last-child) {
+            margin-top: rem(-64);
+          }
+        }
       }
 
-      .nav-home-about,
-      .nav-our-data {
-        .nav-link-wrapper {
-          display: block;
-          padding-bottom: rem(32);
+      .funders {
+        align-self: end;
+        line-height: rem(19);
+
+        a {
+          display: inline-block;
+        }
+      }
+
+      .contact-info {
+        grid-column: 1/2;
+        grid-row: 2/3;
+
+        .logo-ocadu-wrapper {
+          display: inline-flex;
+          padding-top: rem(16);
+
+          a {
+            display: inline-block;
+          }
+
+          .logo-ocadu {
+            padding: 0;
+          }
         }
       }
 
@@ -165,34 +215,6 @@ footer {
         .social-media-icons {
           grid-template-columns: repeat(4, auto);
           margin: inherit;
-        }
-      }
-
-      .funders {
-        align-self: end;
-        grid-column: 5/6;
-        line-height: rem(19);
-
-        a {
-          display: inline-block;
-        }
-      }
-    }
-
-    .contact-info {
-      grid-column: 1/3;
-      grid-row: 2/3;
-
-      .logo-ocadu-wrapper {
-        display: inline-flex;
-        padding-top: rem(16);
-
-        a {
-          display: inline-block;
-        }
-
-        .logo-ocadu {
-          padding: 0;
         }
       }
     }
