fix: renamed background image

--- a/assets/css/layout/_layout.scss
+++ b/assets/css/layout/_layout.scss
@@ -3,7 +3,7 @@
 
 body {
   background-attachment: fixed;
-  background-image: url("../images/WeCount website background_distribution.svg");
+  background-image: url("../images/background.svg");
   background-position: rem(650) rem(200);
   background-repeat: repeat-x;
   background-size: cover;
