--- a/assets/css/layout/_footer.scss
+++ b/assets/css/layout/_footer.scss
@@ -110,6 +110,7 @@ footer {
         a {
           svg {
             height: rem(40);
+            stroke-width: 3px;
             width: rem(40);
           }
 
