Issue-113: Adjust colors of button text and link text according to the design change.

--- a/assets/css/abstracts/_variables.scss
+++ b/assets/css/abstracts/_variables.scss
@@ -27,10 +27,11 @@ $navy-dark: #162439;
 $navy: #203149;
 $navy-light: #2e405b;
 
-$blue-alt: #5e82ae;
+$blue-alt: #5c81a9;
 $blue-alt-light:#8caabb;
 $green:#b0d0be;
 $green-light: #cee6c5;
+$green-dark: #465D8B;
 $green-pale: #f7fff4;
 
 $orange-focus: #fadc90;
