--- a/assets/css/abstracts/_variables.scss
+++ b/assets/css/abstracts/_variables.scss
@@ -31,7 +31,7 @@ $blue-alt: #5c81a9;
 $blue-alt-light:#8caabb;
 $green:#b0d0be;
 $green-light: #cee6c5;
-$green-dark: #465D8B;
+$green-dark: #465d8b;
 $green-pale: #f7fff4;
 
 $orange-focus: #fadc90;
