Issue-117: Complete the styling for the post article page.

--- a/assets/css/abstracts/_variables.scss
+++ b/assets/css/abstracts/_variables.scss
@@ -22,6 +22,7 @@ $gold-light: #ffe6a7;
 
 // Secondary
 $black: #000;
+$grey-light: #6c6c6c;
 $grey-dark: #313131;
 $navy-dark: #162439;
 $navy: #203149;
@@ -34,6 +35,7 @@ $green-light: #cee6c5;
 $green-pale: #f7fff4;
 
 $orange-focus: #fadc90;
+$orange-light: #5c81a9;
 
 // UIO
 $yellow: #ff0;
