--- a/assets/css/components/_news-and-views.scss
+++ b/assets/css/components/_news-and-views.scss
@@ -25,6 +25,7 @@
       }
 
       .author {
+        color: $grey-light;
         font-style: italic;
         font-weight: $font-weight-semibold;
       }
