Issue-117: Add focus/hover styling for tag links and improve the layout of the tag page.

--- a/assets/css/components/_post-article.scss
+++ b/assets/css/components/_post-article.scss
@@ -34,6 +34,11 @@
       font-weight: $font-weight-normal;
       margin: rem(8);
       padding: rem(5) rem(16);
+
+      &:focus,
+      &:hover {
+        text-decoration: underline;
+      }
     }
   }
 }
