Issue-123: Adjust color variable name.

--- a/assets/css/abstracts/_variables.scss
+++ b/assets/css/abstracts/_variables.scss
@@ -26,12 +26,12 @@ $grey-dark: #313131;
 $navy-dark: #162439;
 $navy: #203149;
 $navy-light: #2e405b;
-$navy-alt: #465d8b;
 
 $blue-alt: #5e82ae;
 $blue-alt-light:#8caabb;
 $green:#b0d0be;
 $green-light: #cee6c5;
+$green-dark: #465d8b;
 $green-pale: #f7fff4;
 
 $orange-focus: #fadc90;
