--- a/assets/css/components/_pagination.scss
+++ b/assets/css/components/_pagination.scss
@@ -54,7 +54,7 @@
   li {
     a.is-current {
       background-color: $green-pale;
-      border: rem(2) solid $navy-alt; // no color variable available
+      border: rem(2) solid $green-dark; // no color variable available
     }
   }
 
