Issue-117: Address review suggestions.

--- a/assets/css/abstracts/_variables.scss
+++ b/assets/css/abstracts/_variables.scss
@@ -29,9 +29,10 @@ $navy: #203149;
 $navy-light: #2e405b;
 
 $blue-alt: #5e82ae;
-$blue-alt-light:#8caabb;
-$green:#b0d0be;
+$blue-alt-light: #8caabb;
+$green: #b0d0be;
 $green-light: #cee6c5;
+$green-dark: #465d8b;
 $green-pale: #f7fff4;
 
 $orange-focus: #fadc90;
