Style page content (#134)
* fix: ran npm install

* fix: styled page content

resolves #115

* fix: table of content text wraps

* fix: moved commented code

* fix: removed headers property from Aside element

* fix: wrapped main element around aside and nuxt element

* feat: use CSS grid for main content area and aside

* fix: remove margin-left

Co-authored-by: Ned Zimmerman <ned@bight.dev>

--- a/assets/css/abstracts/_variables.scss
+++ b/assets/css/abstracts/_variables.scss
@@ -42,3 +42,6 @@ $orange-light: #5c81a9;
 $yellow: #ff0;
 $white: #fff;
 $grey: #bdbdbb;
+
+// Images
+$img-size-medium: rem(262); // need to decide and set other size variables
