--- a/assets/css/layout/_layout.scss
+++ b/assets/css/layout/_layout.scss
@@ -1,16 +1,100 @@
 // Layout styles.
 @import "header";
 
-article {
-  margin-left: auto;
-  margin-right: auto;
+main {
+  margin: 0 auto;
   max-width: 75ch;
-  padding: rem(0) rem(27);
+  width: 100%;
 }
 
-@media screen and (min-width: 1024px) {
-  article {
+article {
+  padding: rem(0) rem(27);
+
+  h2:not(.h3) {
+    border-bottom: rem(5) solid $gold;
+    padding-bottom: rem(12);
+  }
+
+  .wp-block-image {
+    figure {
+      margin-left: 0;
+
+      img {
+        height: 100%;
+      }
+    }
+  }
+
+  .wp-block-image + * {
+    margin-top: rem(50);
+  }
+}
+
+/*
+ * Default WP Alignment Classes
+ *****************************************************************************/
+figcaption {
+  color: #ddd;
+  display: block;
+  font-size: 75%;
+  font-style: italic;
+  font-weight: 100;
+  padding: 0;
+  text-align: center;
+}
+
+figcaption:hover {
+  background: #444;
+  border: rem(1) solid #555;
+  padding: rem(5) 0;
+  text-align: center;
+}
+
+.size-large {
+  height: $img-size-medium; // need to decide and set other size variables
+}
+
+@media screen and (min-width: rem(1024)) {
+  .content-wrapper {
+    display: grid;
+    grid-template-columns: 1fr minmax(75ch, 130ch) 1fr;
+  }
+
+  main {
     max-width: 130ch;
-    padding: rem(0) rem(60);
+
+    article {
+      padding: rem(0) rem(60);
+
+      .wp-block-image ~ h2 {
+        margin-top: $img-size-medium;
+      }
+    }
+  }
+
+  /*
+ * Default WP Alignment Classes
+ *****************************************************************************/
+
+  .aligncenter,
+  .alignleft,
+  .alignright {
+    display: block;
+    padding: 0;
+  }
+
+  .aligncenter {
+    float: none;
+    margin: 0.5em auto 1em;
+  }
+
+  .alignright {
+    float: right;
+    margin: 0.5em 0 1em 1em;
+  }
+
+  .alignleft {
+    float: left;
+    margin: 0.5em 1em 1em 0;
   }
 }
