--- a/assets/css/components/_pagination.scss
+++ b/assets/css/components/_pagination.scss
@@ -25,14 +25,15 @@
 
   .pagination-link {
     background-color: $green-light;
-    border: rem(2) solid $blue-alt-light;
+    border: 0;
     border-radius: 100%;
+    box-shadow: 0 0 0 rem(2) $blue-alt-light inset;
     float: left;
-    font-size: rem(15);
+    font-size: rem(24);
     font-weight: 400;
     height: rem(45);
-    line-height: rem(40);
-    margin: rem(10) rem(2);
+    line-height: rem(45);
+    margin: rem(10) rem(10);
     transform: perspective(rem(5)) translateZ(0);
     width: rem(45);
   }
@@ -43,8 +44,7 @@
     content: '';
     height: 100%;
     left: 0;
-    margin: rem(1) rem(1);
-    opacity: 0;
+    opacity: 1;
     position: absolute;
     top: 0;
     width: 100%;
@@ -53,25 +53,28 @@
   .pagination-link:hover::before,
   .pagination-link:focus::before,
   .pagination-link:active::before {
-    left: rem(2);
-    opacity: 1;
-    top: rem(2);
+    left: rem(4);
+    top: rem(4);
   }
 
   .pagination-ellipsis {
-    background-color: $white;
-    border: none;
-    color: $blue-alt;
+    margin: 0 rem(6);
+    position: relative;
 
-    &:hover {
-      background-color: $white;
+    span {
+      bottom: 0;
+      color: $blue-alt;
+      font-size: rem(24);
+      left: rem(-8);
+      position: absolute;
     }
   }
 
   li {
     a.is-current {
       background-color: $green-pale;
-      border: rem(2) solid $green-dark; // no color variable available
+      box-shadow: 0 0 0 rem(2) $green-dark inset;
+      &::before { box-shadow: 0 0 0 rem(2) $green-dark inset; }
     }
   }
 
@@ -120,7 +123,7 @@
     .pagination-link {
       font-size: rem(24);
       height: rem(53);
-      line-height: rem(50);
+      line-height: rem(53);
       margin: 0 rem(13);
       width: rem(53);
     }
