--- a/assets/css/layout/_header.scss
+++ b/assets/css/layout/_header.scss
@@ -145,7 +145,7 @@ header {
           // When the user is in a section (other than the Home page), underline this particular item
           // in the top level navigation.
           a.nuxt-link-active {
-            border-bottom: rem(2) solid $orange-focus;
+            border-bottom: rem(2) solid $white;
           }
         }
 
