--- a/assets/css/layout/_layout.scss
+++ b/assets/css/layout/_layout.scss
@@ -2,6 +2,17 @@
 @import "header";
 @import "footer";
 
+// Sticky footer. See https://philipwalton.github.io/solved-by-flexbox/demos/sticky-footer/
+#defaultContainer {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+.content-wrapper {
+  flex: 1;
+}
+
 main {
   margin: 0 auto;
   max-width: 75ch;
