fix: removed comments

--- a/assets/css/base/_base.scss
+++ b/assets/css/base/_base.scss
@@ -52,7 +52,7 @@ button {
   font-size: rem(24);
   font-weight: 400;
   height: rem(54);
-  line-height: (rem(34) / rem(24));
+  line-height: (34 / 24);
   padding: rem(8) rem(34);
   transform: perspective(rem(1)) translateZ(0);
 }
