--- a/assets/css/components/_pagination.scss
+++ b/assets/css/components/_pagination.scss
@@ -97,6 +97,11 @@
   .pagination-next:hover,
   .pagination-previous:hover {
     background-color: transparent;
+
+    svg {
+      fill: $green-dark;
+      stroke-width: "1";
+    }
   }
 }
 
