--- a/assets/css/components/_pagination.scss
+++ b/assets/css/components/_pagination.scss
@@ -97,6 +97,12 @@
   .pagination-next,
   .pagination-previous {
     color: $green-dark;
+
+    svg {
+      fill: none;
+      stroke: currentColor;
+      stroke-width: 2;
+    }
   }
 
   .pagination-next:hover,
@@ -106,11 +112,8 @@
     background-color: transparent;
 
     svg {
-      fill: $green-dark;
-
-      path {
-        stroke-width: 0.25;
-      }
+      fill: currentColor;
+      stroke-width: 0.25;
     }
   }
 }
