Style homepage content (#122)
* feat: added background image

resolves #114

* fix: style article instead of .main

* fix: used font weight variable

* fix: add cards to homepage

* fix: centered cards

* fix: renamed svg's

* fix: used imporoved card images

* fix: renamed background image

* fix: homepage content

* fix: remove example content in aside

* fix: changed desktop background size to cover

* fix: added focus styling to cards

Co-authored-by: Cindy Qi Li <cli@ocadu.ca>
Co-authored-by: Ned Zimmerman <ned@bight.dev>

--- a/assets/css/layout/_layout.scss
+++ b/assets/css/layout/_layout.scss
@@ -2,6 +2,14 @@
 @import "header";
 @import "footer";
 
+body {
+  background-attachment: fixed;
+  background-image: url("../images/background.svg");
+  background-position: rem(650) rem(200);
+  background-repeat: repeat-x;
+  background-size: cover;
+}
+
 // Sticky footer. See https://philipwalton.github.io/solved-by-flexbox/demos/sticky-footer/
 #defaultContainer {
   display: flex;
@@ -39,6 +47,16 @@ article {
 
   .wp-block-image + * {
     margin-top: rem(50);
+  }
+
+  .api-content {
+    display: block;
+
+    &::after {
+      clear: both;
+      content: "";
+      display: table;
+    }
   }
 }
 
@@ -81,16 +99,27 @@ figcaption:hover {
 }
 
 @media screen and (min-width: rem(1024)) {
+  body {
+    background-position: rem(750) rem(1);
+  }
+
   .content-wrapper {
     display: grid;
     grid-template-columns: 1fr minmax(75ch, 130ch) 1fr;
+    grid-template-rows: auto auto;
+  }
+
+  article {
+    background-color: $white;
+    padding: 0 rem(60);
   }
 
   main {
     max-width: 130ch;
 
     article {
-      padding: rem(0) rem(60);
+      background-color: $white;
+      padding: rem(1) rem(60);
 
       .wp-block-image ~ h2 {
         margin-top: $img-size-medium;
