--- a/assets/css/layout/_layout.scss
+++ b/assets/css/layout/_layout.scss
@@ -64,19 +64,10 @@ article {
  * Default WP Alignment Classes
  *****************************************************************************/
 figcaption {
-  color: #ddd;
   display: block;
-  font-size: 75%;
+  font-size: rem(14);
   font-style: italic;
-  font-weight: 100;
-  padding: 0;
-  text-align: center;
-}
-
-figcaption:hover {
-  background: #444;
-  border: rem(1) solid #555;
-  padding: rem(5) 0;
+  padding: 1rem 0;
   text-align: center;
 }
 
