Padding at main bottom (#151)
* fix: added padding to bottom of main article

* fix: rerun PR test

* fix: remove comment

--- a/assets/css/layout/_layout.scss
+++ b/assets/css/layout/_layout.scss
@@ -100,17 +100,13 @@ figcaption {
     grid-template-rows: auto auto;
   }
 
-  article {
-    background-color: $white;
-    padding: 0 rem(60);
-  }
-
   main {
     max-width: 130ch;
 
     article {
       background-color: $white;
       padding: rem(1) rem(60);
+      padding-bottom: rem(62);
 
       .wp-block-image ~ h2 {
         margin-top: $img-size-medium;
