--- a/assets/css/components/_cards.scss
+++ b/assets/css/components/_cards.scss
@@ -52,6 +52,7 @@
 @media screen and (min-width: 1024px) {
   .homepage-cards {
     grid-gap: rem(38);
+    // TODO: Make 3 columns again.
     grid-template-columns: repeat(2, 1fr);
 
     a {
