Hide tools card (#153)
* fix: hide tools card on homepage

* fix: add todos, use hidden

Co-authored-by: Ned Zimmerman <ned@bight.dev>

--- a/assets/css/components/_cards.scss
+++ b/assets/css/components/_cards.scss
@@ -52,7 +52,8 @@
 @media screen and (min-width: 1024px) {
   .homepage-cards {
     grid-gap: rem(38);
-    grid-template-columns: repeat(3, 1fr);
+    // TODO: Make 3 columns again.
+    grid-template-columns: repeat(2, 1fr);
 
     a {
       .green-title {
