fix: adjust social media SVGs

--- a/assets/css/layout/_footer.scss
+++ b/assets/css/layout/_footer.scss
@@ -111,6 +111,8 @@ footer {
         }
 
         a {
+          color: $white;
+
           svg {
             height: rem(60);
             stroke-width: 3px;
