fix: background position (resolves #142)

--- a/assets/css/layout/_header.scss
+++ b/assets/css/layout/_header.scss
@@ -1,6 +1,8 @@
 // Header styles
 
 header {
+  background-color: $white;
+
   .site-nav-wrapper {
     background-color: $navy-light;
     width: 100%;
