feat: add meta description and Open Graph image (fix #146) (#155)
* feat: add meta description, Open Graph image and site icons

* fix: add TODO

* fix: update assets/config.js

Co-Authored-By: Justin Obara <jobara@users.noreply.github.com>

* fix: adjust social media SVGs

* feat: add og:url

* fix: use property for OG tags

Co-authored-by: Justin Obara <jobara@users.noreply.github.com>

--- a/assets/css/layout/_footer.scss
+++ b/assets/css/layout/_footer.scss
@@ -116,6 +116,8 @@ footer {
         }
 
         a {
+          color: $white;
+
           svg {
             height: rem(60);
             stroke-width: 3px;
