--- a/assets/css/layout/_header.scss
+++ b/assets/css/layout/_header.scss
@@ -57,6 +57,7 @@ header {
           color: $white;
           display: block;
           float: none;
+          font-size: rem(24);
           font-weight: $font-weight-normal;
           margin: rem(16) rem(16);
           text-align: left;
