--- a/assets/css/layout/_layout.scss
+++ b/assets/css/layout/_layout.scss
@@ -4,8 +4,8 @@
 
 body {
   background-attachment: fixed;
-  background-image: url("../images/background.svg");
-  background-position: -50vw 25vh;
+  background-image: url("../images/background-distribution.svg");
+  background-position: 0 center;
   background-repeat: repeat-x;
   background-size: cover;
 }
@@ -90,7 +90,7 @@ figcaption {
 
 @media screen and (min-width: rem(1024)) {
   body {
-    background-position: -25vw bottom;
+    background-position: center;
   }
 
   .content-wrapper {
