--- a/src/_includes/components/news-item.njk
+++ b/src/_includes/components/news-item.njk
@@ -1,11 +1,11 @@
 <article class="news-item">
     <h2 class="h3">
-        <a rel="external" href="{{ newsItem.acf.link }}">{{ newsItem.title.rendered | safe }}</a>
+        <a rel="external" href="{{ newsItem.href }}">{{ newsItem.title | safe }}</a>
     </h2>
     <div class="date">
-        <time datetime="{{ newsItem.date | w3DateFilter }}" class="dt-published">{{ newsItem.date | dateFilter }}</time>
+        <time datetime="{{ newsItem.dateTime | w3DateFilter }}" class="dt-published">{{ newsItem.dateTime | dateFilter }}</time>
     </div>
     <div class="preview-content">
-        {{ newsItem.excerpt.rendered | striptags | safe }}
+        {{ newsItem.excerpt | striptags | safe }}
     </div>
 </article>
