--- a/src/_includes/components/views-item.njk
+++ b/src/_includes/components/views-item.njk
@@ -3,13 +3,13 @@
         {% include 'svg/placeholder.svg' %}
     </figure>
     <h2 class="h3">
-        <a href="/views/{{ viewsItem.slug }}/">{{ viewsItem.title.rendered | safe }}</a>
+        <a href="/views/{{ viewsItem.slug }}/">{{ viewsItem.title | safe }}</a>
     </h2>
-    <div class="author">By {{ viewsItem._embedded.author[0].name }}</div>
+    <div class="author">By {{ viewsItem.author | safe }}</div>
     <div class="date">
-        <time datetime="{{ viewsItem.date | w3DateFilter }}" class="dt-published">{{ viewsItem.date | dateFilter }}</time>
+        <time datetime="{{ viewsItem.dateTime | w3DateFilter }}" class="dt-published">{{ viewsItem.dateTime | dateFilter }}</time>
     </div>
     <div class="preview-content">
-        {{ viewsItem.excerpt.rendered | striptags | safe }}
+        {{ viewsItem.excerpt | striptags | safe }}
     </div>
 </article>
