--- a/src/_includes/layouts/page.njk
+++ b/src/_includes/layouts/page.njk
@@ -1,7 +1,7 @@
 {% extends 'layouts/base.njk' %}
 
-{% set title = pageItem.title.rendered %}
-{% set excerpt = pageItem.excerpt.rendered %}
+{% set title = pageItem.title %}
+{% set excerpt = pageItem.excerpt %}
 
 {% block content %}
 {% if page.url === '/' %}
@@ -12,7 +12,17 @@
     {{ content | safe }}
     </div>
     </article>
-    <div class="homepage-cards"><a href="/views/" class="blue card"><h3>Read current views in inclusive data science</h3></a> <a href="/tools/" class="green card" hidden=""><h3 class="green-title">Find inclusive data tools</h3></a> <a href="/inclusion-challenges/" class="yellow card"><h3>Participate in our inclusion challenge workshops</h3></a></div>
+    <div class="homepage-cards">
+			<a href="/views/" class="blue card">
+				<h3>Read current views in inclusive data science</h3>
+			</a>
+			<a href="/tools/" class="green card" hidden>
+				<h3>Find inclusive data tools</h3>
+			</a>
+			<a href="/inclusion-challenges/" class="yellow card">
+				<h3>Participate in our inclusion challenge workshops</h3>
+			</a>
+		</div>
 </div>
 
 {% else %}
