--- a/src/pageItem.njk
+++ b/src/pageItem.njk
@@ -1,6 +1,6 @@
 ---
 pagination:
-    data: pageData
+    data: collections.pages
     size: 1
     alias: pageItem
 permalink: "/{{ '/' if pageItem.slug === 'home' else pageItem.slug  }}/"
