--- a/src/viewsItem.njk
+++ b/src/viewsItem.njk
@@ -1,6 +1,6 @@
 ---
 pagination:
-    data: viewsData
+    data: collections.views
     size: 1
     alias: postItem
 permalink: "views/{{ postItem.slug }}/"
