--- a/src/views.njk
+++ b/src/views.njk
@@ -1,19 +1,20 @@
 ---
-title: News
-permalink: /news/
+title: Views
+permalink: /views/
+pageContext: views
 ---
 {% extends 'layouts/base.njk' %}
 
 {% block content %}
-    <article class="news">
-        <h1>News</h1>
+    <article class="views">
+        <h1>Views</h1>
         <div class="news-grid">
-            {% for newsItem in newsData %}
+            {% for item in collections.views %}
             <div class="api-content">
-            {% include 'components/news-item.njk' %}
+            {% include 'components/grid-item.njk' %}
             </div>
             {% endfor %}
-        </div>    
+        </div>
         {# TODO: Pagination. #}
     </article>
 {% endblock %}
