--- a/src/_includes/layouts/404.njk
+++ b/src/_includes/layouts/404.njk
@@ -1,5 +1,8 @@
 {% extends 'layouts/base.njk' %}
 
+{% set pageTitle = pageItem.title %}
+{% set pageExcerpt = content %}
+
 {% block content %}
 <article class="page">
     <h1>{{ title }}</h1>
